fix min width on smaller screens

--- a/fe/src/components/IntroInfo/IntroInfo.scss
+++ b/fe/src/components/IntroInfo/IntroInfo.scss
@@ -8,7 +8,9 @@
 
 ion-avatar { 
     width: 7vw;  
-    height: 7vw;  
+    height: 7vw;
+    min-width: 100px;  
+    min-height: 100px;  
 }
 
 ion-progress-bar {
@@ -22,4 +24,8 @@ ion-progress-bar {
 h5 {
     margin: 0 !important;
     padding: 0.3em;
+}
+
+.capacityPercentage {
+    min-width: 60px;
 }
